@@ -1,0 +1,17 @@
+# User@Host: meow[meow] @  [1.2.3.8]
+# Thread_id: 5  Schema: db1
+# Query_time: 0.000002  Lock_time: 0.000000  Rows_sent: 5  Rows_examined: 3
+# No InnoDB statistics available for this query
+# administrator command: Quit;
+# User@Host: meow[meow] @  [1.2.3.8]
+# Thread_id: 6  Schema: db2 
+# Query_time: 0.000899  Lock_time: 0.000000  Rows_sent: 0  Rows_examined: 3
+# No InnoDB statistics available for this query
+use db;
+SET NAMES utf8;
+# User@Host: meow[meow] @  [1.2.3.8]
+# Thread_id: 7  Schema: db2
+# Query_time: 0.018799  Lock_time: 0.009453  Rows_sent: 9  Rows_examined: 2
+# No InnoDB statistics available for this query
+use db2;
+# administrator command: Quit;
