@@ -1,0 +1,40 @@
+# Query 001 (0 QPS) ID: 0x8EC70FAF5FB095A9 at byte 435 __________________
+#              total    %     min     max     avg     95%  stddev  median
+#     Count        2   66
+# Exec time   18.8ms   95     2us  18.8ms   9.4ms  18.8ms  13.3ms   9.4ms
+# Lock time    9.5ms  100       0   9.5ms   4.7ms   9.5ms   6.7ms   4.7ms
+# Rows sent        0    0       0       0       0       0       0       0
+# Rows exam        0    0       0       0       0       0       0       0
+#       DBs  db2, db1
+#     Users  meow
+# Execution times
+#   1us  ################################################################
+#  10us
+# 100us
+#   1ms
+#  10ms  ################################################################
+# 100ms
+#    1s
+#  10s+
+# administrator command: Quit\G
+
+# Query 002 (0 QPS) ID: 0xCC47B42511EA22DD at byte 221 __________________
+#              total    %     min     max     avg     95%  stddev  median
+#     Count        1   33
+# Exec time    899us    4   899us   899us   899us   899us       0   899us
+# Lock time        0    0       0       0       0       0       0       0
+# Rows sent        0    0       0       0       0       0       0       0
+# Rows exam        3  100       3       3       3       3       0       3
+#       DBs  db
+#     Users  meow
+# Execution times
+#   1us
+#  10us
+# 100us  ################################################################
+#   1ms
+#  10ms
+# 100ms
+#    1s
+#  10s+
+SET NAMES utf8\G
+
